{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 254,
  "lineage": "9860cdaf-484d-4fa2-b4b2-484ec3fbb399",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "team4-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:257248662189:internet-gateway/igw-0601c362086fec518",
            "id": "igw-0601c362086fec518",
            "owner_id": "257248662189",
            "vpc_id": "vpc-046c6da1c0fae74d0"
          },
          "dependencies": [
            "aws_vpc.team4-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "team4-pubRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:257248662189:route-table/rtb-053dc8239830eb1f9",
            "id": "rtb-053dc8239830eb1f9",
            "owner_id": "257248662189",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0601c362086fec518",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-046c6da1c0fae74d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.team4-igw",
            "aws_vpc.team4-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "team4-pubrt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024c694c7ed845ef2",
            "route_table_id": "rtb-053dc8239830eb1f9",
            "subnet_id": "subnet-054da11f698f80af4"
          },
          "dependencies": [
            "aws_internet_gateway.team4-igw",
            "aws_route_table.team4-pubRT",
            "aws_subnet.team4-pub1",
            "aws_vpc.team4-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "team4-pubrt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08394e643b28c3943",
            "route_table_id": "rtb-053dc8239830eb1f9",
            "subnet_id": "subnet-0b0bc1e5c7382c4ec"
          },
          "dependencies": [
            "aws_internet_gateway.team4-igw",
            "aws_route_table.team4-pubRT",
            "aws_subnet.team4-pub2",
            "aws_vpc.team4-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Team4-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:257248662189:security-group/sg-015f7fb37af6acb89",
            "description": "allow all",
            "egress": [],
            "id": "sg-015f7fb37af6acb89",
            "ingress": [],
            "name": "terraform-20230306143314175100000007",
            "name_prefix": "terraform-",
            "owner_id": "257248662189",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-046c6da1c0fae74d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.team4-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tm4-eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:257248662189:security-group/sg-0ee07526be5b37a6d",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ee07526be5b37a6d",
            "ingress": [],
            "name": "terraform-20230306143301830500000001",
            "name_prefix": "terraform-",
            "owner_id": "257248662189",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-054b8acf465c06da4"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "t4allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow",
            "from_port": 80,
            "id": "sgrule-207073649",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-015f7fb37af6acb89",
            "security_group_rule_id": "sgr-07bc3089ac75c5722",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Team4-sg",
            "aws_vpc.team4-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "t4allowout",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow out",
            "from_port": 0,
            "id": "sgrule-3156462987",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-015f7fb37af6acb89",
            "security_group_rule_id": "sgr-0d71e2cf931e10a5e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Team4-sg",
            "aws_vpc.team4-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "team4-pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:257248662189:subnet/subnet-054da11f698f80af4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "40.40.42.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054da11f698f80af4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "257248662189",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-046c6da1c0fae74d0"
          },
          "dependencies": [
            "aws_vpc.team4-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "team4-pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:257248662189:subnet/subnet-0b0bc1e5c7382c4ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "40.40.43.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0bc1e5c7382c4ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "257248662189",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-046c6da1c0fae74d0"
          },
          "dependencies": [
            "aws_vpc.team4-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "team4-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:257248662189:vpc/vpc-046c6da1c0fae74d0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "40.40.0.0/16",
            "default_network_acl_id": "acl-0875a84872f367860",
            "default_route_table_id": "rtb-091d40180c917f54a",
            "default_security_group_id": "sg-016d641111025fd73",
            "dhcp_options_id": "dopt-0bc6fdc94cd01afdd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-046c6da1c0fae74d0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-091d40180c917f54a",
            "owner_id": "257248662189",
            "tags": {
              "Name": "Team4"
            },
            "tags_all": {
              "Name": "Team4"
            }
          }
        }
      ]
    }
  ]
}